Adição de email no aplicativo.

--- a/CarriotsStreamExample/res/layout/activity_main.xml
+++ b/CarriotsStreamExample/res/layout/activity_main.xml
@@ -4,44 +4,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:text="@string/title"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/textView1"
-        android:layout_marginTop="14dp"
-        android:text="@string/action"
-        android:textAppearance="?android:attr/textAppearanceSmall" />
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/textView2"
-        android:layout_marginTop="14dp"
-        android:text="@string/question"
-        android:textAppearance="?android:attr/textAppearanceSmall" />
-
     <Button
         android:id="@+id/button1"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_below="@+id/textView3"
         android:layout_marginTop="14dp"
-        android:text="@string/btn_start"
-        android:onClick="startService" />
+        android:onClick="startService"
+        android:text="@string/btn_start" />
 
     <Button
         android:id="@+id/button2"
@@ -53,5 +23,19 @@
         android:layout_marginTop="18dp"
         android:text="@string/btn_stop" 
         android:onClick="stopService" />
+
+    <EditText
+        android:id="@+id/editText1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/button2"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="58dp"
+        android:hint="@string/btn_email"
+        android:inputType="textEmailAddress"
+        android:ems="10" >
+
+        <requestFocus />
+    </EditText>
 
 </RelativeLayout>
